--- a/vignettes/generate_report.Rmd
+++ b/vignettes/generate_report.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Import example metabolomics data
+
 ```{r render}
 library(metaboprep)
 
@@ -22,21 +24,43 @@ mydata <- read_metabolon(system.file("extdata", "metabolon_v1.1_example.xlsx", p
                       sheet="OrigScale",
                       return_Metaboprep = TRUE)
 
-# run QC
-## Adding suppressWarnings() to avoid deparse() error when rendering vignette with S7 method warnings
-mydata <- mydata |>
-  quality_control(source_layer = "input", 
-                                    sample_missingness  = 0.2, 
-                                    feature_missingness = 0.2, 
-                                    total_peak_area_sd  = 5, 
-                                    outlier_udist       = 5, 
-                                    outlier_treatment   = "leave_be", 
-                                    winsorize_quantile  = 1.0, 
-                                    tree_cut_height     = 0.5, 
-                                    pc_outlier_sd       = 5, 
-                                    sample_ids          = NULL, 
-                                    feature_ids         = NULL) 
+```
 
+
+## Identify the Xenobiotics to exclude from the QC steps
+
+```{r xeno_identification}
+xenos = mydata@features |>
+  dplyr::filter(pathway == "xenobiotic") |>
+  dplyr::pull(feature_id)
+
+## how many xenobiotics identified
+length(xenos)
+```
+
+## QC the example Metabolon data
+
+
+```{r qc}
+mydata <- mydata |>
+  quality_control(source_layer        = "input", 
+                  sample_missingness  = 0.2, 
+                  feature_missingness = 0.2, 
+                  total_peak_area_sd  = 5, 
+                  outlier_udist       = 5, 
+                  outlier_treatment   = "leave_be", 
+                  winsorize_quantile  = 1.0, 
+                  tree_cut_height     = 0.5, 
+                  pc_outlier_sd       = 5,
+                  feature_selection   = "least_missingness", 
+                  features_exclude_but_keep = xenos 
+                  )
+
+```
+
+## Generate the metaboprep report
+
+```{r}
 # render report
 generate_report(mydata,
                 project         = "myproject",
@@ -44,8 +68,8 @@ generate_report(mydata,
                 output_filename = NULL,
                 format          = "html",
                 template        = "qc_report")
-
 ```
+
 
 ```{r, echo=FALSE}
 file.copy(file.path(getwd(), "myproject_metaboprep_qc_report.html"), 
