--- a/vignettes/nightingale.Rmd
+++ b/vignettes/nightingale.Rmd
@@ -14,9 +14,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-Nightingale data is...
 
-## Import Nightingale data
+## Import Nightingale data directly into a Metaboprep object
+
+Read in the Nightingale Health data using the `read_nightingale` function. Here we will read in the example data provided with the package, and convert it directly into a Metaboprep S7 object.
+
+
 ```{r setup}
 library(metaboprep)
 
@@ -24,26 +27,24 @@ library(metaboprep)
 filepath <- system.file("extdata", "nightingale_v2_example.xlsx", package = "metaboprep")
 
 # import
-dat <- read_nightingale(filepath, return_Metaboprep = FALSE)
+mydata <- read_nightingale(filepath, return_Metaboprep = TRUE)
 
-# view structure
-str(dat)
 ```
 
-## Create Metaboprep object 
-Once imported, we pass the data to the `Metaboprep` class object. 
-```{r metaboprep_obj}
-m <- Metaboprep(data     = dat$data, 
-                features = dat$features, 
-                samples  = dat$samples)
 
-# view 
-summary(m)
+## Quick look at data structure of the imported data
+
+```{r data_str}
+str(mydata)
 ```
+
 
 ## QC Nightingale
+
+Perform the QC steps using the `quality_control` function.
+
 ```{r qc}
-m <- m |>
+mydata <- mydata |>
   quality_control(source_layer        = "input", 
                   sample_missingness  = 0.2, 
                   feature_missingness = 0.2, 
@@ -52,8 +53,16 @@ m <- m |>
                   outlier_treatment   = "leave_be", 
                   winsorize_quantile  = 1.0, 
                   tree_cut_height     = 0.5, 
-                  pc_outlier_sd       = 5)
-
-# view 
-summary(m)
+                  pc_outlier_sd       = 5, 
+                  feature_selection   = "max_var_exp",
+                  features_exclude_but_keep = NULL
+                  )
 ```
+
+
+## Quick summary of the metaboprep object following QC
+
+```{r summary_after_qc}
+summary(mydata)
+```
+
